--- a/less/_create-gift.less
+++ b/less/_create-gift.less
@@ -18,7 +18,7 @@
     	color: rgba(255, 255, 255, 0.78);
     }
     .voucher{
-    	bottom: -55px;
+    	top: 70%;
     	border-radius: 3px;
     	left: 0;
     	width: 90%;
@@ -290,6 +290,9 @@
 
 .section-number{
 	margin-top: 4em;
+    width: 80%;
+    margin-left: auto;
+    margin-right: auto;
 	.points{
 		padding: 0;
     	margin: 0;
@@ -297,6 +300,7 @@
     	li{
     		display: flex;
     		align-items: center;
+            cursor: pointer;
     		.number{
     			position: relative;
     			font-size: 1.8em;
@@ -353,7 +357,7 @@
 	&.affix{
 		position: fixed !important;
     	top: 0;
-    	padding-left: 0.3em;
+    	padding-left: 3.5em;
 	}
 }
 
@@ -368,7 +372,7 @@
 		overflow: hidden;
 	}
 	.keywords{
-		padding: 1em 1em 0 1em;
+		padding: 1em 0.7em 0 0.7em;
     	display: flex;
     	// align-items: center;
     	justify-content: center;
@@ -409,7 +413,7 @@
 	    	font-size: 1.6em;
 	    }
 	    .voucher{
-	    	bottom: -5em;
+	    	// bottom: -5em;
     		align-items: flex-start;
 	    	.col{
 	    		// flex: inherit;
@@ -499,7 +503,7 @@
 }
 
 
-@media screen and (min-width: 1024px) and (max-width: 1999px){
+@media screen and (min-width: 1024px) and (max-width: 1199px){
 	.name-box{
 		.voucher{
 			.col{
@@ -514,6 +518,17 @@
 		}
 	}
 }
+
+
+@media screen and (min-width: 768px) and (max-width: 1200px){
+    .section-number{
+        width: 100%;
+        &.affix{
+            padding-left: 0.3em;
+        }
+    }
+}
+
 
 @media screen and (min-width: 550px) and (max-width: 1023px){
 	.name-box{
@@ -551,7 +566,7 @@
 @media screen and (min-width: 700px) and (max-width: 767px){
 	.name-box{
 		.voucher{
-			bottom: -5em;
+			// bottom: -5em;
 			width: 65%;
 		}
 	}
@@ -574,7 +589,7 @@
 @media screen and (max-width: 500px){
 	.name-box{
 	    .voucher{
-	    	bottom: -118px;
+	    	// bottom: -112px;
 	    	flex-direction: column;
 	    	align-items: center;
 	    	text-align: center;
@@ -590,9 +605,12 @@
     			justify-content: center;
     			text-align: center;
     			img{
-    				margin: 0 1em 0 0;
+    				margin: 0 0.5em 0 0;
     				display: block;
     			}
+                span{
+                    margin-left: 0;
+                }
     		}
 	    }
 	}
