--- a/less/_home.less
+++ b/less/_home.less
@@ -304,7 +304,7 @@ input,.form-control,textarea{
 
 .voucher{
 	position: absolute;
-    bottom: -50px;
+    top: 90%;
     background-color: #fff;
     width: 90%;
     left: 2em;
@@ -317,8 +317,8 @@ input,.form-control,textarea{
 		flex: 1 0 0;
 		padding: 0 0.3em;
 		display: flex;
-		align-items: center;
-		justify-content: space-between;
+		// align-items: center;
+		// justify-content: space-between;
 		.fa{
 			font-size: 3em;
 		}
@@ -334,6 +334,9 @@ input,.form-control,textarea{
 		&.voucher-name{
 			// min-width: 173px;
 			flex: 1.5 0 0;
+			img{
+				align-self: baseline;
+			}
 		}
 		&.occasion{
 			align-items: baseline;
